# discord-webhook-crash-reporter

./: README.md  pyproject.toml
src/: __init__.py  crash_reporter.py
