[tool.poetry]
name = "crash-reporter"
version = "1.0.0"
description = "uploads a python traceback to a discord webhook"
authors = ["sweeze <sw33ze@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
